feat: updtaing docs and status codes use
