# packages/server/src/controllers/routes.controller.ts
@@ -2,6 +2,7 @@ import { Request, Response } from 'express'
 import { routesServices } from '../services'
 import { tUserList } from '../../../Shared/types/user.types'
 import { iMainResponse, iUserListResponse } from '../../../Shared/types/responses.types';
+import { StatusCodes } from 'http-status-codes';
 
 
 export const calculateRoute = async (req: Request, res: Response): Promise<Response<iUserListResponse>> => {
@@ -11,17 +12,17 @@ export const calculateRoute = async (req: Request, res: Response): Promise<Respo
     const response: iUserListResponse = {
       error: false,
       message: "Ordenação feita com sucesso.",
-      status: 200,
+      status: StatusCodes.OK,
       data,
     } 
-    return res.status(200).send(response)
+    return res.status(StatusCodes.OK).send(response)
   } catch (error) {
     console.error(error)
     const response: iMainResponse = {
       error: false,
       message: "Erro interno no servidor.",
-      status: 500
+      status: StatusCodes.INTERNAL_SERVER_ERROR
     } 
-    return res.status(500).send(response)
+    return res.status(StatusCodes.INTERNAL_SERVER_ERROR).send(response)
   }
 };
